Ensure report page is full height on mobile

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -809,7 +809,7 @@ a#menu-toggle:focus {
     .resource-component-abstract-container {
         display: inline-flex;
         width: 100vw;
-        height: calc(100vh - 100px);
+        height: 100%;
     }
 
     .resource-component-abstract-container.is-summary {
